Make sure aligned img has margin left or right

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -167,17 +167,15 @@ figure.wp-block-image.aligncenter {
     @apply mx-auto;
 }
 
-figure.alignleft,
-p .alignleft,
-p img .alignleft {
+figure.wp-block-image.alignleft img {
     @apply float-left;
-    @apply my-8;
+    /* @apply my-8; */
     @apply mr-8;
 }
 
 figure.wp-block-image.alignright img {
     @apply float-right;
-    @apply my-8;
+    /* @apply my-8; */
     @apply ml-8;
 }
 
@@ -185,6 +183,15 @@ figure.wp-block-image.alignright img {
 .entry-content figure {
     @apply max-w-full;
     @apply mx-auto;
+}
+
+.wp-block-image .aligncenter,
+.wp-block-image .alignleft,
+.wp-block-image .alignright,
+.wp-block-image.aligncenter,
+.wp-block-image.alignleft,
+.wp-block-image.alignright {
+    @apply block;
 }
 
 /* ___________________________________________   forms */
